<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultEdit"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:capitalize="words"
        android:gravity="center"
        android:text="TextView"
        android:textSize="96sp"
        app:layout_constraintBottom_toTopOf="@+id/mainlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="426dp">

        <LinearLayout
            android:id="@+id/buttonRow01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_01"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_02"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button_03"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/buttonDiv"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button_04"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button_05"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button06"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button_06"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/buttonMult"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/button_07"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button08"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/button_08"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button_09"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/ButtonAdd"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/buttonCE"
                android:textSize="60sp" />

            <Button
                android:id="@+id/button00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/button_00"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/buttonDot"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/buttonSub"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow05"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEq"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnResultClick"
                android:text="="
                android:textSize="150sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>